--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1> Mi primera página web </h1>
+    <p>hola buenas <span style = "color:blue">tardes </span> </p>
 </body>
 </html>
