--- a/HTML/Ejercicio11/Ejercicio11c.html
+++ b/HTML/Ejercicio11/Ejercicio11c.html
@@ -7,22 +7,33 @@
     <title>Document</title>
 </head>
 <body>
+    <p> <h1> NOTICIAS</h1></p>
     <div style="
     position: absolute;
-    top: 5px;
-    left: 5px;
-    width: 370px;
-    height: 1580px;
+    top: 80px;
+    left: 3%;
+    width: 45%;
+    height: 1570px;
     border: 3px solid;">
+    <h2> ¿ La 125 al mejor precio del mercado ?</h2>
+    <p> Por tan solo 2800€ te puedes llevar una de las mejores motocicletas 125 relación calidad/precio 
+    <div class="card">
+        <img src="hondaaaa.jpg" alt="Avatar" style="width: 100%">
+        <div class="container"> 
+        </div>
+    <p> <strong> Precio inigualable !! </strong></p>
     </div>
+
+    </p>
+    </div>
+
     <div style="
     position: absolute;
-    top: 5px;
-    left: 386px;
-    width: 700px;
-    height: 1580px;
+    top: 80px;
+    right: 3%;
+    width: 45%;
+    height: 1570px;
     border: 3px solid;">
-    <h1> Noticias </h1>
     <h2> Las mejores motocicleta 125 de la actualidad !! </h2>
     <p> La Honda CB125F es una pequeña naked enfocada a los usuarios que se inician en el mundo de las motos con marchas y que necesitan una montura económica y de mecánica simple. Es una moto muy válida para un uso diario tanto en ciudad como en áreas rurales.
         Se trata de la tercera versión de este modelo, nacido en 2015 sobre la base de la CBF125 y que fue de nuevo renovada en 2017. En 2021 vuelve a actualizarse por completo, tanto en el aspecto estético como en el mecánico, con una nueva parte ciclo y un renovado propulsor, lo que hace de ella una montura más ligera y eficiente, manteniendo además las mismas prestaciones. 
@@ -32,6 +43,7 @@
         <div class="container"> 
         </div>
     </div>
+    <p> <strong> Honda cb125f </strong></p>
     <hr>
     <h2> La mejor motocicleta 125 para empezar hoy en dia !! </h2>
     <p> Sin duda alguna, hemos abierto el año con una de las mejores sino la mejor motocicleta 125 de la década, nada más y nada menos que la Honda CB125F 
@@ -41,6 +53,7 @@
         <div class="container"> 
         </div>
     </div>
+    <p> <strong> La mejor moto !! </strong></p>
       
 </body>
 </html>
