--- a/CSS/Ejercicio 1/Ejercicio1.html
+++ b/CSS/Ejercicio 1/Ejercicio1.html
@@ -9,8 +9,8 @@
 
 </head>
 <body>
-    <h1 id = "titulo1"> Hola buenassss </h1>
-    <h2 id = "titulo2"> Hola buenassss </h2>
+    <h1 id = "titulo1"> Hola buenasssss </h1>
+    <h2 id = "titulo2"> Hola buenasssss </h2>
     <h3> Hola buenassss </h3>
 </body>
 </html>
