--- a/CSS/Ejercicio 4/Ejercicio4.html
+++ b/CSS/Ejercicio 4/Ejercicio4.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <p>Hola buenassss </p>
-    <p id = "p2"> Hola buenassss </p>
+    <p id = "p2"> Hola buenasssss </p>
     <p> Hola buenassss</p>
-    <p id = "p4">Hola buenassss </p>
+    <p id = "p4">Hola buenasssss </p>
     <p> Hola buenassss</p>
-    <p id = "p6"> Hola buenasssss </p>
-    <p> Hola buenassss </p>
-    <p> Hola buenassss </p>
+    <p id = "p6"> Hola buenassssss </p>
+    <p> Hola buenasssss </p>
+    <p> Hola buenasssss </p>
 </body>
 </html>
