--- a/CSS/Ejercicio 6/Ejercicio6.html
+++ b/CSS/Ejercicio 6/Ejercicio6.html
@@ -10,15 +10,15 @@
 <body>
 
     <div id="capa1">
-        Hola Buenas
+        Hola Buenass
     </div>
 
     <div id="capa2">
-        Hola Buenas
+        Hola Buenass
     </div>
 
     <div id="capa3">
-        Hola Buenas
+        Hola Buenass
     </div>
 
 </body>
